(lang dune 3.20)

(name ocaml_aoc_2025)

(generate_opam_files false)

(source
 (github FizzyElt/ocaml_aoc_2025))

(license LICENSE)

(package
 (name ocaml_aoc_2025)
 (allow_empty)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml containers lp lp-glpk)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
